Creating a completly new NewDrug activity with its XML file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">L.A.Y.</string>
     <string name="show_nothing">Nothing to show :[</string>
-    <string name="today">Today.</string>
+    <string name="today">Today</string>
 </resources>
