Designing the new activity_new_drug.xml, now based on a CoordinateLayout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">L.A.Y.</string>
     <string name="show_nothing">Nothing to show :[</string>
     <string name="today">Today</string>
+    <string name="hint_name">Name</string>
 </resources>
