--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">L.A.Y. - Today</string>
+    <string name="app_name">LAY - Today</string>
     <string name="nothing">Nothing to show :[</string>
     <string name="hint_drug_name">Name</string>
     <string name="hint_lab_name">Laboratory</string>
