--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     </string-array>
     <string name="spinner_prompt_time2">Diner</string>
     <string name="card_subtitle_string_text">Has to be taken</string>
+    <string name="card_between"> to </string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
